# matrix-gen-pro

./: .clinerules  .env.example  .gitignore  README.md  SOFTWARE_ANALYSIS.md  STORAGE.md  finish.js  geeknow-api-Document.json  geeknow-api文档 (2).json  index.html  key.txt  latest.json  package-lock.json  package.json  run_sign.bat  setup.exe.sig  sign-pro.js  vite.config.ts  智创聚合插件编写指南.md
.github/workflows/: release.yml
plugins/: geeknow-provider.js  grsai-provider.js  test-plugin.js
scripts/: publish-release.mjs
src/: App.tsx  VersionBadge.tsx  index.css  main.tsx  types.ts
src-tauri/: .env  .gitignore  2  Cargo.toml  tauri.conf.json  tauri.conf.json.pub
src-tauri/capabilities/: default.json
src-tauri/plugins/: geeknow-provider.js  grsai-provider.js  test-provider.js  zhichuang-provider.js
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: ErrorBoundary.tsx  Icons.tsx  JobCard.tsx  LogsPanel.tsx  Sora2RolePanel.tsx  SoundToggle.tsx  Toast.tsx
src/hooks/: useModalClickOutside.ts
src/lib/: utils.ts
src/pages/: LogMonitorPage.tsx
src/services/: FileService.ts  GeeknowPlugin.ts  GrsaiPlugin.ts  StorageService.ts  apiAdapter.ts  catboxUpload.ts  ffmpegService.ts  fileUpload.ts  llmService.ts  logger.ts  mockApi.ts  pluginLoader.ts  pluginSystem.ts  soraCharacter.ts  soundService.ts  storage.ts  toastService.ts  windowManager.ts
src/types/: plugin.ts
src/utils/: soundManager.ts  timeUtils.ts
